--- a/Index.css
+++ b/Index.css
@@ -481,7 +481,7 @@ a{
 }
 
 .media .mediaImg img{
-    width: 370px;
+    width: 100%;
     border-radius: 50%;
 }
 
@@ -604,12 +604,12 @@ a{
 }
     
 .announcement h1{
-    font-size: 50px;
+    font-size: 3.5vw;
     text-align: right;
 }
 
 .announcement p{
-    font-size: 20px;
+    font-size: 2vw;
     text-align: right;
 }
 
@@ -633,7 +633,7 @@ a{
 }
 
 .announceImg img{
-    width: 370px;
+    width: 100%;
     border-radius: 50%;
 }
 
@@ -660,6 +660,17 @@ a{
 
 .demnSon h1:hover{
     color: #B1B2FF;
+}
+
+.demnSon a{
+    text-decoration: none;
+    color: white;
+    font-size: 1.3vw;
+}
+
+.demnSon a:hover{
+    color: #B1B2FF;
+    cursor: pointer;
 }
 
 .demnSon p{
