--- a/Sundayservice.css
+++ b/Sundayservice.css
@@ -58,6 +58,7 @@ a{
 .videoSection video{
     display: block;
     margin: 0 auto;
+    width: 75%;
 }
 
 /* ================================================================ */
@@ -143,7 +144,6 @@ a{
 
 .lecture1 img{
     width: 100%;
-    max-width: 350px;
 }
 
 .textArea{
@@ -175,8 +175,7 @@ a{
 }
 
 .lecture2 img{
-    max-width: 100%;
-    width: 350px;
+    width: 100%;
 }
 
 .textArea2{
@@ -213,8 +212,7 @@ a{
 }
 
 .lecture3 img{
-    max-width: 100%;
-    width: 350px;
+    width: 100%;
 }
 
 .textArea3{
@@ -254,8 +252,7 @@ a{
 }
 
 .lecture4 img{
-    max-width: 100%;
-    width: 350px;
+    width: 100%;
 }
 
 .textArea4{
@@ -287,8 +284,7 @@ a{
 }
 
 .lecture5 img{
-    max-width: 100%;
-    width: 350px;
+    width: 100%;
 }
 
 .textArea5{
@@ -320,8 +316,7 @@ a{
 }
 
 .lecture6 img{
-    max-width: 100%;
-    width: 350px;
+    width: 100%;
 }
 
 .textArea6{
@@ -386,7 +381,7 @@ a{
 }
 
 .announceImg img{
-    width: 370px;
+    width: 100%;
     border-radius: 50%;
 }
 
