--- a/Index.css
+++ b/Index.css
@@ -513,8 +513,8 @@ a{
 .form{
     margin-top: 5%;
     padding: 5%;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .form h1{
@@ -527,51 +527,14 @@ a{
 
 .form p{
     font-size: 20px;
-    padding-bottom: 5%;
+    padding-bottom: 2%;
 }
 
 #sform{
     font-size: 20px;
     margin-left: 5%;
     margin-right: 5%;
-    margin-bottom: 10px;
     border-bottom: none;
-}
-
-.form form{
-    margin-left: 5%;
-    margin-right: 5%;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-}
-
-.form label{
-    font-weight: bold;
-    font-size: 15px;
-}
-
-.form input{
-    width: 95%;
-    padding: 15px 10px 15px 10px;
-    height: 14px;
-    margin-bottom: 10px;
-    border: none;
-    background: none;
-    border-bottom: #B1B2FF 2px solid; 
-    outline: none;
-}
-
-.form textarea{
-    width: 95%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 7px;
-    height: 100px;
-    border: none;
-    background: none;
-    border-bottom: #B1B2FF 2px solid;
-    outline: none;
 }
 
 .form button{
@@ -648,6 +611,7 @@ a{
     padding-bottom: 5%;
     background-color: black;
     color: white;
+    text-align: center;
 }
 
 .demnSon{
