--- a/Index.css
+++ b/Index.css
@@ -9,6 +9,7 @@
 .webTop{
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(HeadnFooter/HomeBG.jpg);
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .navbar{
@@ -16,19 +17,24 @@
     padding-left: 5%;
     padding-right: 5%;
     box-sizing: border-box;
-    overflow: hidden;
+    background-color: gray;
+    position: fixed;
+    backdrop-filter: blur(5px);
+    background-color: rgb(4, 24, 21); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.5); /* Black w/opacity/see-through */
 }
 
 .links{
     width: 100%;
     display: flex;
     align-items: center;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 
 nav{
     flex: 1;
     text-align: right;
-
 }
 
 nav ul li{
@@ -38,9 +44,9 @@ nav ul li{
 }
 
 nav ul li a{
-    text-decoration: none;
+    text-decoration: none;  
     color: white;
-    font-size: 15px;
+    font-size: 0.9vw;
 }
 
 nav ul li a:hover{
@@ -49,9 +55,10 @@ nav ul li a:hover{
 }
 
 .logoIcon{
-    width: 100px;
+    width: 80%;
+    max-width: 100px;
     cursor: pointer;
-    margin: 30px 0;
+    margin:  0;
 }
 
 .menuIcon{
@@ -62,17 +69,18 @@ nav ul li a:hover{
 
 .churchName{
     padding: 5%;
+    padding-top: 15%;
     color: white;
 }
 
 .churchName h1{
     text-align: center;
-    font-size: 12vw;
+    font-size: 9.5vw;
 }
 
 .churchName h2{
     text-align: center;
-    font-size: 1.5vw;
+    font-size: 5.5vw;
 }
 
 /*==========================================*/
@@ -91,7 +99,6 @@ nav ul li a:hover{
     border: 2px solid #6668e421;
     margin: 10px;
     border-radius: 10px;
-    backdrop-filter: blur(5px);
     color: white;
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(255, 255, 255, 0.24); /* Black w/opacity/see-through */
@@ -110,25 +117,7 @@ nav ul li a:hover{
     color: white;
 }
 
-.h1::after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    left: 0;
-    bottom: 0;
-    background: #B1B2FF;
-   
-}
 
-.h1-center::after{
-    transform: scale(0, 1);
-    transition: transform 0.3s;
-}
-
-.h1-center:hover::after{
-    transform: scale(1, 1);
-}
 
 /*==========================================*/
 
@@ -274,6 +263,7 @@ nav ul li a:hover{
     padding-bottom: 150px;
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(EquippingIMGs/BFAgain.jpg);
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .upperPos{
@@ -282,51 +272,8 @@ nav ul li a:hover{
     margin-right: 15%;
 }
 
-.images{  
-    margin-top: 50px;
-    display: flex;
-    width: 100%;
-    max-width: 400px;
-}
-
-.image1 img{
-    position: relative;
-    width: 400px;
-    transition: transform .2s;
-}
-
-.image1 img:hover{
-    transform: scale(1.1);
-}
-
-.image2 img{
-    position: absolute;
-    width: 400px;
-    margin-left: -210px;
-    margin-top: 110px;
-    transition: transform .2s;
-}
-
-.image2 img:hover{
-    transform: scale(1.1);
-}
-
-.image3 img{
-    position: absolute;
-    width: 290px;
-    margin-left: -430px;
-    margin-top: 170px;
-    transition: transform .2s;
-}
-
-.image3 img:hover{
-    transform: scale(1.1);
-}
-
 .text{
-    margin-top: 100px;
-    margin-left: 230px;
-    margin-right: 40px;
+    
     padding: 10px;
 }
 
@@ -702,71 +649,6 @@ a{
 }
 
 /*-----------------------------------------------------*/
-@media only screen and (max-width:1400px){
-    .upperPos{
-        display: flex;
-        margin-left: 10%;
-        margin-right: 10%;
-    }
-
-    
-    .images{  
-        margin-top: 50px;
-        display: flex;
-        width: 100%;
-        max-width: 400px;
-    }
-    
-    .image1 img{
-        position: relative;
-        width: 320px;
-        transition: transform .2s;
-    }
-    
-    .image1 img:hover{
-        transform: scale(1.1);
-    }
-    
-    .image2 img{
-        position: absolute;
-        width: 320px;
-        margin-left: -210px;
-        margin-top: 110px;
-        transition: transform .2s;
-    }
-    
-    .image2 img:hover{
-        transform: scale(1.1);
-    }
-    
-    .image3 img{
-        position: absolute;
-        width: 250px;
-        margin-left: -390px;
-        margin-top: 170px;
-        transition: transform .2s;
-    }
-    
-    .image3 img:hover{
-        transform: scale(1.1);
-    }
-    
-}
-
-@media only screen and (max-width:1300px){
-    .images{
-        display: none;
-    }
-    
-    .text{
-        justify-content: center;
-        align-items: center;
-        margin-top: 100px;
-        margin-left: 0px;
-        margin-right: 0px;
-        padding: 0px;
-    }
-}
 
 @media only screen and (max-width:500px){
 
@@ -780,13 +662,17 @@ a{
         width: 70px;
     }
 
+    .links{
+        padding-top: 4%;
+        padding-bottom: 4%;
+    }
+
     .menuIcon{
         width: 60px;
         display: block;
     }
 
     nav ul{
-        margin-top: 30px;
         width: 100%;
         background: black;
         position: absolute;
@@ -803,6 +689,7 @@ a{
 
     nav ul li a{
         color: white;
+        font-size: 2.5vw;
     }
 
     #menuList{
@@ -812,16 +699,17 @@ a{
 
     .churchName{
         padding: 5%;
+        padding-top: 30%;
         padding-bottom: 5%;
     }
 
     .churchName h1{
-       font-size: 80px;
+       font-size: 60px;
        color: white;
     }
 
     .churchName h2{
-        font-size: 15px;
+        font-size: 20px;
         color: white;
     }
 
