--- a/Index.css
+++ b/Index.css
@@ -9,6 +9,7 @@
 .webTop{
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(HeadnFooter/HomeBG.jpg);
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .navbar{
@@ -16,7 +17,8 @@
     padding-left: 5%;
     padding-right: 5%;
     box-sizing: border-box;
-    overflow: hidden;
+    background-color: #23252e;
+    position: fixed;
 }
 
 .links{
@@ -28,7 +30,6 @@
 nav{
     flex: 1;
     text-align: right;
-
 }
 
 nav ul li{
@@ -40,16 +41,15 @@ nav ul li{
 nav ul li a{
     text-decoration: none;
     color: white;
-    font-size: 15px;
+    font-size: 1.2vw;
 }
 
 nav ul li a:hover{
     color: #AAC4FF;
-    
 }
 
 .logoIcon{
-    width: 100px;
+    width: 7%;
     cursor: pointer;
     margin: 30px 0;
 }
@@ -62,6 +62,7 @@ nav ul li a:hover{
 
 .churchName{
     padding: 5%;
+    padding-top: 20%;
     color: white;
 }
 
@@ -79,55 +80,26 @@ nav ul li a:hover{
 
 .mgp{
     display: flex;
+    justify-content: center;
     margin-left: 15%;
     margin-right: 15%;
-    margin-top: 5%;
     padding-bottom: 5%;
 }
 
-.mgp .vision, .purpose, .goal {
-    flex: 2 ;
-    padding: 40px 40px 40px 40px;
-    border: 2px solid #6668e421;
-    margin: 10px;
-    border-radius: 10px;
-    backdrop-filter: blur(5px);
+.mgp .vision, .purpose, .goal{
+    flex: 2;
+    border: 2px solid white;
+    border-radius: 4%;
+    margin: 1%;
+    padding: 2%;
     color: white;
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(255, 255, 255, 0.24); /* Black w/opacity/see-through */
-}
-
-.h1{
-    position: relative;
     text-align: center;
-    padding-bottom: 10px;
-    font-size: 2.5vw;    
+    font-size: 1.5vw;
 }
 
-.mgp p{
-    padding-top: .6vw;
-    text-align: justify;
-    color: white;
-}
-
-.h1::after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    left: 0;
-    bottom: 0;
-    background: #B1B2FF;
-   
-}
-
-.h1-center::after{
-    transform: scale(0, 1);
-    transition: transform 0.3s;
-}
-
-.h1-center:hover::after{
-    transform: scale(1, 1);
+.yas{
+    text-align: center;
+    font-size: 2.4vw;
 }
 
 /*==========================================*/
@@ -261,6 +233,7 @@ nav ul li a:hover{
     width: 100%;
     max-width: 550px;
     border-radius: 20px;
+
 }
 .wildfire:hover{
     overflow: hidden;
@@ -274,6 +247,7 @@ nav ul li a:hover{
     padding-bottom: 150px;
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(EquippingIMGs/BFAgain.jpg);
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .upperPos{
@@ -282,51 +256,7 @@ nav ul li a:hover{
     margin-right: 15%;
 }
 
-.images{  
-    margin-top: 50px;
-    display: flex;
-    width: 100%;
-    max-width: 400px;
-}
-
-.image1 img{
-    position: relative;
-    width: 400px;
-    transition: transform .2s;
-}
-
-.image1 img:hover{
-    transform: scale(1.1);
-}
-
-.image2 img{
-    position: absolute;
-    width: 400px;
-    margin-left: -210px;
-    margin-top: 110px;
-    transition: transform .2s;
-}
-
-.image2 img:hover{
-    transform: scale(1.1);
-}
-
-.image3 img{
-    position: absolute;
-    width: 290px;
-    margin-left: -430px;
-    margin-top: 170px;
-    transition: transform .2s;
-}
-
-.image3 img:hover{
-    transform: scale(1.1);
-}
-
 .text{
-    margin-top: 100px;
-    margin-left: 230px;
-    margin-right: 40px;
     padding: 10px;
 }
 
