--- a/SOL.css
+++ b/SOL.css
@@ -70,20 +70,29 @@ a{
     display: flex;
     justify-content: center;
     flex: 1;
-    margin-top: 3%;
 }
 
 .container1 img{
-    width: 60%;
-    margin-top: 3%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
 
 .containerText{
     display: flex;
-    justify-content: left;
+    justify-content: center;
     flex: 1;
-    margin-top: 1%;
-    margin-left: 20%;
+    padding-bottom: 15%;
+    padding-top: 15%;
+    background-color: black;
+    color: yellow;
+}
+
+.containerText h1{
+    font-size: 6vw;
+}
+
+.containerText h1:hover{
+    text-decoration: underline;
+    cursor: pointer;
 }
