--- a/Sundayservice.css
+++ b/Sundayservice.css
@@ -12,15 +12,20 @@
   scroll-behavior: smooth;
 }
 
+a{
+    text-decoration: none;
+    color: transparent;
+}
+
 /* custom scroll bar */
 ::-webkit-scrollbar {
     width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: #2F3C7E;
 }
 ::-webkit-scrollbar-thumb {
-    background: black;
+    background: #FBEAEB;
 }
 ::selection{
   background: rgb(0,123,255,0.3);
@@ -121,6 +126,10 @@
     margin-bottom: 3%;
 }
 
+#shim{
+    margin-top: 3%;
+}
+
 .container h1{
     font-family: 'Amatic SC';
     font-size: 4.3vw;
@@ -147,9 +156,23 @@
     font-size: 3vw;
 }
 
+.containerImg h1{
+    margin-top: 2%;
+    font-family: 'Amatic SC';
+    font-size: 7vw;
+    text-align: center;
+    margin-bottom: 2%;
+}
+
 /* ==================================================== */
 
-.word1{
+#sermons{
+    background-color: #2F3C7E;
+    color: #FBEAEB  ;
+    padding-top: 5%;
+}
+
+.words1{
     display: none;
 }
 
@@ -195,7 +218,13 @@
     height: 100%;
     max-height: 450px;
     overflow: scroll;
+    overflow-x: hidden;
 }
+
+.scroll::-webkit-scrollbar-track{
+    
+}
+
 
 .img1{
     margin: auto;
@@ -243,7 +272,7 @@
     font-size: 4.3vw;
 }
 
-.word{
+.words{
     display: none;
 }
 
@@ -309,6 +338,8 @@
     margin-left: 0px;
   }
 }
+
+/* ==================================================== */
 
 @media (max-width: 500px) {
     .navbar .logo img{
@@ -383,13 +414,47 @@
     .containerImg h3{
         margin-top: 1%;
         text-align: center;
-        font-size: 3vw;
+        font-size: 5vw;
         font-style: italic;
     }
 
-    .words1{
+    .containerImg h1{
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 10%;
         font-family: 'Amatic SC';
+        font-size: 10vw;
+        text-align: center;
+        margin-bottom: 10%;
+    }
+
+    /* ==================================================== */
+
+    #sermons{
+        background-color: #2F3C7E;
+        color: #FBEAEB  ;
+        padding-top: 5%;
+        padding-bottom: 10%;
+    }
+
+    .words{
+        margin-left: 5%;
         display: block;
+    }
+
+    .words h1{
+        font-family: 'Amatic SC';
+        font-size: 8vw;
+    }
+
+    .words1{
+        margin-top: 5%;
+        margin-left: 5%;
+        display: block;
+    }
+
+    .words1 h1{
+        font-family: 'Amatic SC';
         font-size: 8vw;
     }
 
@@ -447,7 +512,12 @@
         overflow-x: auto;
         margin-left: 5%;
         margin-right: 7%;
-        margin-top: 10%;
+        margin-top: 2%;
+        
+    }
+
+    .bruh a{
+      margin-right: 1%;
     }
 
     .bruh .noice{
@@ -455,13 +525,24 @@
         height: 100px;
         line-height: 100px;
         text-align: center;
-        background-color: #ddd;
+        background-color: #FBEAEB;
         margin-right: 1%;
+        border-radius: 10px;
+        color: #2F3C7E;
+    }
+
+    .bruh .noice h1{
+        font-family:'Amatic SC';
+        font-size: 3.9vw;
+    }
+
+    .bruh .noice p{
+        text-align: center;
     }
 
     .bruh::-webkit-scrollbar{
         width: 0;
+        background-color: #2F3C7E;
     }
-
 
 }
