--- a/Sundayservice.css
+++ b/Sundayservice.css
@@ -280,6 +280,162 @@ a{
     display: none;
 }
 
+/* ==================================================== */
+
+.subs{
+    display: flex;
+    margin-left: 10%;
+    margin-right: 10%;
+    align-items: center;
+    margin-top: 5%;
+    margin-bottom: 3%;
+    justify-content: center;
+    
+}
+
+.subs img{
+  width: 50%;
+  border-radius: 50%;
+}
+
+.sText{
+  margin-left: 4%;
+}
+
+.sText h1{
+  font-family: 'Amatic SC';
+  font-size: 3.5vw;
+}
+
+.sText p{
+  font-size: 1.9vw;
+}
+
+.sText button{
+  border-radius: 4px;
+  background-color: #2F3C7E;
+  border: none;
+  color: #FBEAEB;
+  text-align: center;
+  font-size: 1.3vw;
+  padding: 2%;
+  width: 40%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin-top: 3%;
+}
+
+.sText button h1{
+  font-size: 2vw;
+}
+
+.sText button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.sText button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 5px;
+  right: -20px;
+  transition: 0.5s;
+  width: 30%;
+}
+
+.sText button:hover span {
+  padding-right: 13%;
+}
+
+.sText button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+/* ==================================================== */
+
+.pandA{
+  display: flex;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  justify-content: center;
+}
+
+.prayerReq{
+  text-align: center;
+}
+
+.prayerReq h1{
+  font-family: 'Amatic SC';
+  font-size: 3.5vw;
+}
+
+.prayerReq p{
+  font-size: 1.7vw;
+}
+
+.pandA .button {
+  border-radius: 4px;
+  background-color: #2F3C7E;
+  border: none;
+  color: #FBEAEB;
+  text-align: center;
+  font-size: 1.3vw;
+  padding: 2%;
+  width: 40%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin-top: 3%;
+}
+
+.pandA .button h1{
+  font-size: 2vw;
+}
+
+.pandA .button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.pandA .button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 5px;
+  right: -20px;
+  transition: 0.5s;
+  width: 30%;
+}
+
+.pandA .button:hover span {
+  padding-right: 13%;
+}
+
+.pandA .button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.announcement{
+  text-align: center;
+}
+
+.announcement h1{
+  font-family: 'Amatic SC';
+  font-size: 3.5vw;
+}
+
+.announcement p{
+  font-size: 1.7vw;
+}
+
 
 
 /* ==================================================== */
