--- a/j12.css
+++ b/j12.css
@@ -1,53 +1,121 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Roboto Condensed', sans-serif;
-    scroll-behavior: smooth;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed:ital,wght@0,400;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-.bgweb{
-    background-size: cover;
-    background-image: linear-gradient(rgba(0,0,0,0.50),rgba(0,0,0,0.50)), url(J12KidsIMGs/happyKids.jpg);
-    padding-bottom: 100px;
+
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
+  scroll-behavior: smooth;
 }
 
 a{
     text-decoration: none;
-    color: black;
+    color: transparent;
 }
 
-.topbar{
-    padding-left: 5%;
+/* custom scroll bar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #2F3C7E;
+}
+::-webkit-scrollbar-thumb {
+    background: #FBEAEB;
+}
+::selection{
+  background: rgb(0,123,255,0.3);
+}
+.content{
+  max-width: 1550px;
+  margin: auto;
+  padding: 0 30px;
+}
+.navbar{
+  position: fixed;
+  width: 100%;
+  z-index: 2;
+  padding: 25px 0;
+  transition: all 0.3s ease;
+}
+.navbar.sticky{
+  color: #FBEAEB;
+  background: #FF69B4;
+  padding: 10px 0;
+  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
+}
+.navbar .content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.navbar .logo img{
+  width: 70%;
+}
+.navbar .menu-list{
+  display: inline-flex;
+}
+.menu-list li{
+  list-style: none;
+}
+.menu-list li a{
+  color: #fff;
+  font-size: 1.3vw;
+  margin-left: 25px;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+.menu-list li a:hover{
+  color: #00FFFF;
+  z-index: 2;
+}
+
+.icon{
+  cursor: pointer;
+  display: none;
+}
+.icon img{
+  width: 100%;
+  max-width: 50px;
+}
+.menu-list .cancel-btn{
+  position: absolute;
+  right: 30px;
+  top: 20px;
+  z-index: 2;
+}
+
+.banner{
     width: 100%;
-}
-
-.topbar h1{
-    padding-top: 40px;
-    font-size: 2.5vw;
+    background-image: linear-gradient(rgba(255,105,180, 0.7),rgba(255,105,180, 0.7)), url(J12KidsIMGs/happyKids.jpg);
+    background-size: cover;
     color: white;
-}
-
-.webName{
-    padding-top: 5%;
+    padding-top: 10%;
     padding-bottom: 5%;
+}
+
+#noice{
+    font-family: 'Audiowide';
     text-align: center;
-}
-
-.topbar img{
-    width: 100px;
-    cursor: pointer;
-    margin-top: 2%;
-}
-
-.webName h1{
-    font-size: 7vw;
-    color: white;
-}
-
-.webName h2{
     font-size: 1.3vw;
-    color: white;
+    background-color: #00FFFF;
+    color: #FF69B4;
+    margin-left: 45%;
+    margin-right: 45%;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+}
+
+.banner h1{
+    font-family: 'Andika';
+    font-size: 10vw;
+    text-align: center;
 }
 
 /* ======================================================= */
@@ -64,23 +132,24 @@ a{
 }
 
 .intro h1{
+    font-family: 'Andika';
     font-size: 3vw;
-}
-
-
-.thingsTodo{
-    display: flex;
-    align-items: flex-start;
-    margin-left: 15%;
-    margin-right: 15%;
 }
 
 /* ======================================================= */
 
+.thingsTodo{
+    display: flex;
+    align-items: flex-start;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
 .thingsTodo .learn{
-    flex: 1;
+    width: 33%;
+    height: 100%;
     margin: 0.5%;
-    border: 4px gray solid;
+    border: 4px #FF69B4 solid;
     cursor: pointer;
     transition-delay: 400ms;
     box-shadow: 0 1px 2px rgba(0,0,0,0.15);
@@ -93,19 +162,21 @@ a{
 }
 
 .learn .learnInfo{
-    background-color: #6cc6cb ;
+    background-color: #FF69B4 ;
     text-align: justify;
     padding: 4% 6% 6% 4%;
     color: #eae5c9;
+    transition: 0.5s;
 }
 
 .learn .learnInfo h1{
-    font-size: 2vw;
+    font-family: 'Andika';
+    font-size: 3vw;
     text-align: center;
 }
 
 .learn .learnInfo p{
-    font-size: 1vw;
+    font-size: 1.9vw;
     text-align: center;
 }
 
@@ -114,91 +185,21 @@ a{
     box-shadow: 0 5px 15px rgba(0,0,0,1);
 }
 
-/* ======================================================= */
-
-.thingsTodo .play{
-    flex: 1;
-    margin: 0.5%;
-    border: 4px gray solid;
-    cursor: pointer;
-    transition-delay: 400ms;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    transition: box-shadow 0.3s ease-in-out;
-    transition: .5s ease-in-out;
+.thingsTodo .learnInfo:hover{
+    color: #FF69B4;
+    background-color: #00FFFF;
 }
 
-.thingsTodo .play img{
-    width: 100%;
-}
-
-.play .playInfo{
-    background-color: #6cc6cb;
-    text-align: justify;
-    padding: 4% 6% 6% 4%;
-    color: #eae5c9;
-}
-
-.play .playInfo h1{
-    font-size: 2vw;
-    text-align: center;
-}
-
-.play .playInfo p{
-    font-size: 1vw;
-    text-align: center;
-}
-
-.thingsTodo .play:hover{
-    border: 4px #6cc6cb solid;
-    box-shadow: 0 5px 15px rgba(0,0,0,1);
-}
-
-/* ======================================================= */
-
-.thingsTodo .praise{
-    flex: 1;
-    margin: 0.5%;
-    border: 4px gray solid;
-    cursor: pointer;
-    transition-delay: 400ms;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    transition: box-shadow 0.3s ease-in-out;
-    transition: .5s ease-in-out;
-}
-
-.thingsTodo .praise img{
-    width: 100%;
-}
-
-.praise .praiseInfo{
-    background-color: #6cc6cb ;
-    text-align: justify;
-    padding: 4% 6% 6% 4%;
-    color: #eae5c9;
-}
-
-.praise .praiseInfo h1{
-    font-size: 2vw;
-    text-align: center;
-}
-
-.praise .praiseInfo p{
-    font-size: 1vw;
-    text-align: center;
-}
-
-.thingsTodo .praise:hover{
-    border: 4px #6cc6cb solid;
-    box-shadow: 0 5px 15px rgba(0,0,0,1);
-}
 
 /* ======================================================= */
 
 .teachers{
     margin-top: 5%;
     display: block;
-    margin-left: 15%;
-    margin-right: 15%;
+    background-color: #FF69B4;
+    color: #00FFFF;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 .meet{
@@ -206,20 +207,25 @@ a{
 }
 
 .meet h1{
-    font-size: 3vw;
+    font-family: 'Andika';
+    font-size: 5vw;
 }
+
+
+/* ======================================================= */
 
 .rowOne{
     display: flex;
     justify-content: center;
     margin-top: 5%;
     padding-bottom: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
-
-/* ======================================================= */
 
 .rowOne .itemOne{
     margin: 2%;
+    width: 25%;
     transition-delay: 200ms;
 }
 
@@ -230,6 +236,18 @@ a{
     transition: box-shadow 0.3s ease-in-out;
     transition: .5s ease-in-out;
     cursor: pointer;
+}
+
+.rowOne .itemOne p{
+    font-family: 'Andika';
+    font-size: 2vw;
+    text-align: center;
+    margin-top: 1%;
+}
+
+#breh{
+    font-size: 1.5vw;
+    font-family: 'Roboto';
 }
 
 .itemOne img:hover{
@@ -243,94 +261,19 @@ a{
 
 /* ======================================================= */
 
-.rowOne .itemTwo{
-    margin: 2%;
-    transition-delay: 400ms;
-}
-
-
-.rowOne .itemTwo img{
-    width: 100%;
-    border-radius: 50%;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    transition: box-shadow 0.3s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-}
-
-.itemTwo img:hover{
-    box-shadow: 0 5px 15px rgba(0,0,0,2);
-}
-
-
-.rowOne .itemTwotext{
-    text-align: center;
-    font-size: 1.4vw;
-}
-
-
-/* ======================================================= */
-
-.rowOne .itemThree{
-    margin: 2%;
-    transition-delay: 600ms;
-}
-
-.rowOne .itemThree img{
-    width: 100%;
-    border-radius: 50%;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    transition: box-shadow 0.3s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-}
-
-.itemThree img:hover{
-    box-shadow: 0 5px 15px rgba(0,0,0,2);
-}
-
-.rowOne .itemThreetext{
-    text-align: center;
-    font-size: 1.4vw;
-}
-
-/* ======================================================= */
-
-.rowOne .itemFour{
-    margin: 2%;
-    transition-delay: 800ms;
-}
-
-.rowOne .itemFour img{
-    width: 100%;
-    border-radius: 50%;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    transition: box-shadow 0.3s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-}
-
-.itemFour img:hover{
-    box-shadow: 0 5px 15px rgba(0,0,0,2);
-}
-
-.rowOne .itemFourtext{
-    text-align: center;
-    font-size: 1.4vw;
-}
-
-/* ======================================================= */
-
 .rowTwo{
     display: flex;
     justify-content: center;
     margin-top: 1%;
     padding-bottom: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 /* ======================================================= */
 
 .rowTwo .itemOne{
+    width: 33%;
     margin: 2%;
     transition-delay: 1000ms;
 }
@@ -344,6 +287,13 @@ a{
     cursor: pointer;
 }
 
+.rowTwo .itemOne p{
+    font-family: 'Andika';
+    font-size: 2vw;
+    text-align: center;
+    margin-top: 1%;
+}
+
 .itemOne img:hover{
     box-shadow: 0 5px 15px rgba(0,0,0,2);
 }
@@ -353,81 +303,8 @@ a{
     font-size: 1.4vw;
 }
 
-/* ======================================================= */
-
-.rowTwo .itemTwo{
-    margin: 2%;
-    transition-delay: 1200ms;
-}
-
-
-.rowTwo .itemTwo img{
-    width: 100%;
-    border-radius: 50%;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    transition: box-shadow 0.3s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-}
-
-.itemTwo img:hover{
-    box-shadow: 0 5px 15px rgba(0,0,0,2);
-}
-
-
-.rowTwo .itemTwotext{
-    text-align: center;
-    font-size: 1.4vw;
-}
-
-/* ======================================================= */
-
-.rowTwo .itemThree{
-    margin: 2%;
-    transition-delay: 1400ms;
-}
-
-.rowTwo .itemThree img{
-    width: 100%;
-    border-radius: 50%;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    transition: box-shadow 0.3s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-}
-
-.itemThree img:hover{
-    box-shadow: 0 5px 15px rgba(0,0,0,2);
-}
-
-.rowTwo .itemThreetext{
-    text-align: center;
-    font-size: 1.4vw
-}
-
-/* ======================================================= */
-
-.rowTwo .itemFour{
-    margin: 2%;
-    transition-delay: 1400ms;
-}
-
-.rowTwo .itemFour img{
-    width: 100%;
-    border-radius: 50%;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    transition: box-shadow 0.3s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-}
-
-.itemThree img:hover{
-    box-shadow: 0 5px 15px rgba(0,0,0,2);
-}
-
-.rowTwo .itemFourtext{
-    text-align: center;
-    font-size: 1.4vw
+.teachers2{
+    display: none;
 }
 
 /* ======================================================= */
@@ -798,3 +675,234 @@ input{
 .play:nth-child(1){
     transition-delay: 200ms;
 }
+
+@media (max-width: 1230px) {
+    .content{
+      padding: 0 60px;
+    }
+  }
+  @media (max-width: 1100px) {
+    .content{
+      padding: 0 40px;
+    }
+  }
+  @media (max-width: 900px) {
+    .content{
+      padding: 0 30px;
+    }
+  }
+  @media (max-width: 868px) {
+    body.disabled{
+      overflow: hidden;
+    }
+    .icon{
+      display: block;
+    }
+    .icon.hide{
+      display: none;
+      z-index: 2;
+    }
+    .navbar .menu-list{
+      position: fixed;
+      height: 100vh;
+      width: 100%;
+      max-width: 400px;
+      left: -100%;
+      top: 0px;
+      display: block;
+      padding: 40px 0;
+      text-align: center;
+      background: #222;
+      transition: all 0.3s ease;
+    }
+    .navbar.show .menu-list{
+      left: 0%;
+    }
+    .navbar .menu-list li{
+      margin-top: 45px;
+    }
+    .navbar .menu-list li a{
+      font-size: 23px;
+      margin-left: -100%;
+      transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    }
+    .navbar.show .menu-list li a{
+      margin-left: 0px;
+    }
+  }
+  
+  /* ==================================================== */
+  
+  @media (max-width: 500px) {
+      .navbar .logo img{
+        width: 40%;
+      }
+    
+      .icon img{
+        width: 100%;
+        max-width: 40px;
+      }
+
+      .banner{
+        width: 100%;
+        color: white;
+        padding-top: 20%;
+        padding-bottom: 10%;
+    }
+
+    #noice{
+        text-align: center;
+        font-size: 3vw;
+        background-color: #00FFFF;
+        color: #FF69B4;
+        margin-left: 38%;
+        margin-right: 38%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+    }
+    
+    .banner h1{
+        font-size: 15vw;
+        text-align: center;
+    }
+
+    .webContent{
+        display: block;
+        padding-bottom: 5%;
+    }
+    
+    .intro{
+        text-align: center;
+        padding-top: 5%;
+        padding-bottom: 1%;
+    }
+    
+    .intro h1{
+        font-family: 'Andika';
+        font-size: 6vw;
+    }
+    
+    /* ======================================================= */
+    
+    .thingsTodo{
+        display: block;
+        align-items: flex-start;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    
+    .thingsTodo .learn{
+        display: flex;
+        width: 100%;
+        height: 100%;
+        margin: 0.5%;
+        margin-top: 5%;
+        border: 4px #FF69B4 solid;
+        cursor: pointer;
+        transition-delay: 400ms;
+        box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+        transition: box-shadow 0.3s ease-in-out;
+        transition: .5s ease-in-out;
+    }
+    
+    .thingsTodo .learn img{
+        width: 50%;
+    }
+    
+    .learn .learnInfo{
+        background-color: #FF69B4 ;
+        text-align: justify;
+        padding: 4% 6% 6% 4%;
+        color: #eae5c9;
+        transition: 0.5s;
+    }
+    
+    .learn .learnInfo h1{
+        font-family: 'Andika';
+        font-size: 5vw;
+        text-align: center;
+    }
+    
+    .learn .learnInfo p{
+        font-size: 4vw;
+        text-align: center;
+    }
+    
+    .thingsTodo .learn:hover{
+        border: 4px #6cc6cb solid;
+        box-shadow: 0 5px 15px rgba(0,0,0,1);
+    }
+    
+    .thingsTodo .learnInfo:hover{
+        color: #FF69B4;
+        background-color: #00FFFF;
+    }
+
+    .teachers{
+        display: none;
+    }
+    
+    
+    /* ======================================================= */
+
+    .teachers2{
+        display: block;
+        background-color: #FF69B4;
+        color: #00FFFF;
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }
+
+    .meet h1{
+        font-size: 7vw;
+    }
+    
+    .rowOne{
+        display: flex;
+        justify-content: center;
+        margin-top: 5%;
+        padding-bottom: 5%;
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+    
+    .rowOne .itemOne{
+        margin: 2%;
+        width: 50%;
+        transition-delay: 200ms;
+    }
+    
+    .rowOne .itemOne img{
+        width: 100%;
+        border-radius: 50%;
+        box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+        transition: box-shadow 0.3s ease-in-out;
+        transition: .5s ease-in-out;
+        cursor: pointer;
+    }
+    
+    .rowOne .itemOne p{
+        font-family: 'Andika';
+        font-size: 4vw;
+        text-align: center;
+        margin-top: 1%;
+    }
+    
+    #breh{
+        font-size: 3vw;
+        font-family: 'Roboto';
+    }
+    
+    .itemOne img:hover{
+        box-shadow: 0 5px 15px rgba(0,0,0,2);
+    }
+    
+    .rowOne .itemOnetext{
+        text-align: center;
+        font-size: 1.4vw;
+    }
+    
+    /* ======================================================= */
+    
+    
+} 
