--- a/Spearhead.css
+++ b/Spearhead.css
@@ -1,56 +1,126 @@
+@import url('https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed:ital,wght@0,400;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     font-family: 'Roboto Condensed', sans-serif;
     scroll-behavior: smooth;
 }
-
-.bgweb{
-    background-size: cover;
-    background-image: linear-gradient(rgba(0,0,0,0.50),rgba(0,0,0,0.90)), url(SpearheadIMGs/spearheadBanner.jpg);
-    padding-bottom: 100px;
-}
-
+  
 a{
     text-decoration: none;
     color: black;
 }
-
-.topbar{
-    padding-left: 5%;
+  
+/* custom scroll bar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #2C5F2DFF;
+}
+::-webkit-scrollbar-thumb {
+    background: #FFE77AFF;
+}
+::selection{
+    background: rgb(0,123,255,0.3);
+}
+.content{
+    max-width: 1550px;
+    margin: auto;
+    padding: 0 30px;
+}
+.navbar{
+    position: fixed;
     width: 100%;
+    z-index: 2;
+    padding: 25px 0;
+    transition: all 0.3s ease;
+}
+.navbar.sticky{
+    color: #FFE77AFF;
+    background: #2C5F2DFF;
+    padding: 10px 0;
+    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
+}
+.navbar .content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.navbar .logo img{
+    width: 70%;
 }
 
-.topbar h1{
-    padding-top: 40px;
-    font-size: 2.5vw;
-    color: white;
+.navbar .menu-list{
+    display: inline-flex;
 }
 
-.webName{
-    padding-top: 5%;
-    padding-bottom: 5%;
+.menu-list li{
+    list-style: none;
+}
+
+.menu-list li a{
+    color: #fff;
+    font-size: 1.3vw;
+    margin-left: 25px;
+    text-decoration: none;
+    transition: all 0.3s ease;
+}
+.menu-list li a:hover{
+    color: #00FFFF;
+    z-index: 2;
+}
+  
+.icon{
+    cursor: pointer;
+    display: none;
+}
+
+.icon img{
+    width: 100%;
+    max-width: 50px;
+}
+
+.menu-list .cancel-btn{
+    position: absolute;
+    right: 30px;
+    top: 20px;
+    z-index: 2;
+}
+  
+.banner{
+      width: 100%;
+      background-image: linear-gradient(rgba(44,95,45, 0.8),rgba(44,95,45, 0.8)), url(J12KidsIMGs/happyKids.jpg);
+      background-size: cover;
+      color: white;
+      padding-top: 10%;
+      padding-bottom: 5%;
+}
+  
+#noice{
+    font-family: 'Audiowide';
+    text-align: center;
+    font-size: 1.3vw;
+    background-color: #FFE77AFF;
+    color: #2C5F2DFF;
+    margin-left: 45%;
+    margin-right: 45%;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+}
+  
+.banner h1{
+    font-family: 'Source Code Pro';
+    font-size: 10vw;
     text-align: center;
 }
-
-.topbar img{
-    width: 100px;
-    cursor: pointer;
-    margin-top: 2%;
-}
-
-.webName h1{
-    font-size: 7vw;
-    color: white;
-}
-
-.webName h2{
-    font-size: 1.3vw;
-    color: white;
-}
-
-/* ================================================ */
 
 .spearheadInfo{
     display: flex;
