--- a/j12.css
+++ b/j12.css
@@ -16,7 +16,7 @@
 
 a{
     text-decoration: none;
-    color: transparent;
+    color: black;
 }
 
 /* custom scroll bar */
@@ -24,10 +24,10 @@ a{
     width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background: #2F3C7E;
+    background: #FF69B4;
 }
 ::-webkit-scrollbar-thumb {
-    background: #FBEAEB;
+    background: #00FFFF;
 }
 ::selection{
   background: rgb(0,123,255,0.3);
@@ -197,7 +197,7 @@ a{
     margin-top: 5%;
     display: block;
     background-color: #FF69B4;
-    color: #00FFFF;
+    color: white;
     padding-top: 5%;
     padding-bottom: 5%;
 }
@@ -318,12 +318,13 @@ a{
 
 .shortIntroduction h1{
     text-align: center;
-    font-size: 3.5vw;
+    font-family: 'Andika';
+    font-size: 4vw;
 }
 
 .shortIntroduction p{
     text-align: center;
-    font-size: 1.5vw;
+    font-size: 2vw;
 }
 
 .studiesSection{
@@ -341,80 +342,28 @@ a{
 
 /* ======================================================= */
 
-.gnews1{
+.oneRow .gnews1{
     margin: 1%;
     transition: .5s ease-in-out;
     cursor: pointer;
 }
 
-.gnews1 img{
+.oneRow .gnews1 img{
     width: 100%;
 }
 
-.gnews1 p{
+.oneRow .gnews1 p{
     font-size: 1vw;
     text-align: center;
 }
 
-.gnews1 h1{
+.oneRow .gnews1 h1{
     font-size: 2vw;
+    font-family: 'Andika';
     text-align: center;
 }
 
-.gnews1:hover{
-    text-decoration: underline;
-}
-
-/* ======================================================= */
-
-.gnews2{
-    margin: 1%;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-}
-
-.gnews2 img{
-    width: 100%;
-}
-
-.gnews2 p{
-    font-size: 1vw;
-    text-align: center;
-}
-
-.gnews2 h1{
-    font-size: 2vw;
-    text-align: center;
-}
-
-.gnews2:hover{
-    text-decoration: underline;
-}
-
-
-/* ======================================================= */
-
-.gnews3{
-    margin: 1%;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-}
-
-.gnews3 img{
-    width: 100%;
-}
-
-.gnews3 p{
-    font-size: 1vw;
-    text-align: center;
-}
-
-.gnews3 h1{
-    font-size: 2vw;
-    text-align: center;
-}
-
-.gnews3:hover{
+.oneRow .gnews1:hover{
     text-decoration: underline;
 }
 
@@ -425,225 +374,105 @@ a{
     justify-content: center;
 }
 
-/* ======================================================= */
-
-.gnews4{
+.twoRow .gnews1{
     margin: 1%;
     transition: .5s ease-in-out;
     cursor: pointer;
 }
 
-.gnews4 img{
+.gnews1 img{
     width: 100%;
 }
 
-.gnews4 p{
+.twoRow .gnews1 p{
     font-size: 1vw;
     text-align: center;
 }
 
-.gnews4 h1{
+.twoRow .gnews1 h1{
     font-size: 2vw;
     text-align: center;
 }
 
-.gnews4:hover{
+.twoRow .gnews1:hover{
     text-decoration: underline;
 }
 
 /* ======================================================= */
 
-.gnews5{
-    margin: 1%;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-}
-
-.gnews5 img{
-    width: 100%;
-}
-
-.gnews5 p{
-    font-size: 1vw;
-    text-align: center;
-}
-
-.gnews5 h1{
-    font-size: 2vw;
-    text-align: center;
-}
-
-.gnews5:hover{
-    text-decoration: underline;
-}
-
-
-/* ======================================================= */
-
-.gnews6{
-    margin: 1%;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-}
-
-.gnews6 img{
-    width: 100%;
-}
-
-.gnews6 p{
-    font-size: 1vw;
-    text-align: center;
-}
-
-.gnews6 h1{
-    font-size: 2vw;
-    text-align: center;
-}
-
-.gnews6:hover{
-    text-decoration: underline;
-}
-
-/* ======================================================= */
-
-.announce1{
+.subs{
     display: flex;
-    justify-content: center;
+    margin-left: 10%;
+    margin-right: 10%;
     align-items: center;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    margin-right: 15%;
-    margin-left: 15%;
-}
-
-.announcement{
-   margin-right: 80px;
-   align-items: center;
-}
-    
-.announcement h1{
-    font-size: 3.5vw;
-    text-align: right;
-}
-
-.announcement p{
-    font-size: 2vw;
-    text-align: right;
-}
-
-.announcement .btn{
-    display: flex;
-    justify-content: end;
-}
-
-.announcement button{
-    border: 2px solid #B1B2FF;
-    border-radius: 5px;
-    background: none;
-    margin: 10px 0 10px 0;
-    padding: 15px;  
-    cursor: pointer;
-    transition: transform .2s;
-}
-
-.announcement button:hover{
-    transform: scale(1.1);
-}
-
-.announceImg img{
-    width: 100%;
-    border-radius: 50%;
-}
-
-/* ======================================================= */
-
-.bgbackground{
-    background-color:  #2c3e50;
-}
-
-.bottomLinks{
-    display: flex;
+    margin-top: 5%;
+    margin-bottom: 3%;
     justify-content: center;
-    padding-left: 15%;
-    padding-right: 15%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    background-color: #2c3e50;
-    color: white;
+    
 }
 
-.demnSon{
-    margin-right: 2%;
-    text-align: center;
+.subs img{
+  width: 50%;
+  border-radius: 50%;
 }
 
-.demnSon h1{
-    font-size: 3.5vw;
+.sText{
+  margin-left: 4%;
 }
 
-.demnSon a{
-    text-decoration: none;
-    color: white;
+.sText h1{
+  font-family: 'Andika';
+  font-size: 3vw;
 }
 
-.demnSon a:hover{
-    color: #B1B2FF;
+.sText p{
+  font-size: 1.9vw;
 }
 
-.demnSon h1:hover{
-    color: #B1B2FF;
-    cursor: pointer;
+.sText button{
+  border-radius: 4px;
+  background-color: #FF69B4;
+  border: none;
+  color: #00FFFF;
+  text-align: center;
+  font-size: 1.3vw;
+  padding: 2%;
+  width: 40%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin-top: 3%;
 }
 
-.demnSon p:hover{
-    color: #B1B2FF;
-    cursor: pointer;
+.sText button h1{
+  font-size: 1.5vw;
+  font-family: 'Andika';
 }
 
-.demnSon p{
-    font-size: 1.3vw;
+.sText button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
 }
 
-/* ======================================================= */
-
-.bottomForm{
-    width: 60%;
-    margin-left: 5%;
+.sText button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 5px;
+  right: -20px;
+  transition: 0.5s;
+  width: 30%;
 }
 
-.bottomForm h1{
-    font-size: 2.5vw;
+.sText button:hover span {
+  padding-right: 13%;
 }
 
-.bottomForm p{
-    font-size: 1.3vw;
-    margin-bottom: 5%;
+.sText button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
-
-form{
-    border: 1px white solid;
-    padding: 7%;
-    padding-top: 8%;
-    padding-bottom: 8%;
-}
-
-label{
-    padding-top: 2%;
-}
-
-input{
-    width: 100%;
-    background: none;
-    outline: none;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    border: none;
-    border-bottom: white 1px solid;
-    margin-bottom: 2%;
-    font-size: 1.3vw;
-    color: white;
-}
-
 /* ======================================================= */
 
 .hidden{
@@ -904,5 +733,146 @@ input{
     
     /* ======================================================= */
     
+    .shortIntroduction{
+        margin-top: 7%;
+        margin-bottom: 5%;
+        margin-right: 5%;
+        margin-left: 5%;
+    }
     
+    .shortIntroduction h1{
+        text-align: center;
+        font-family: 'Andika';
+        font-size: 10vw;
+    }
+    
+    .shortIntroduction p{
+        text-align: center;
+        font-size: 4vw;
+    }
+    
+    .studiesSection{
+        display: block;
+        justify-content: center;
+        padding-bottom: 5%;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    
+    .oneRow{
+        display: block;
+        justify-content: center;
+    }
+    
+    /* ======================================================= */
+    
+    .oneRow .gnews1{
+        margin: 1%;
+        padding: 3%;
+        margin-top: 5%;
+        transition: .5s ease-in-out;
+        cursor: pointer;
+        border: 2px solid #FF69B4;
+    }
+    
+    .oneRow .gnews1 img{
+        width: 100%;
+    }
+    
+    .oneRow .gnews1 p{
+        font-size: 3vw;
+        text-align: center;
+    }
+    
+    .oneRow .gnews1 h1{
+        font-size: 5vw;
+        font-family: 'Andika';
+        text-align: center;
+    }
+    
+    .oneRow .gnews1:hover{
+        text-decoration: underline;
+    }
+    
+    /* ======================================================= */
+
+    .subs{
+        display: block;
+        margin-left: 5%;
+        margin-right: 5%;
+        align-items: center;
+        margin-top: 5%;
+        margin-bottom: 3%;
+        justify-content: center;
+        
+    }
+    
+    .subs img{
+      width:90%;
+      border-radius: 50%;
+      display: block;
+      margin: auto;
+    }
+    
+    .sText{
+      margin-left: 4%;
+    }
+    
+    .sText h1{
+      font-family: 'Amatic SC';
+      font-size: 10vw;
+      text-align: center;
+    }
+    
+    .sText p{
+      font-size: 4vw;
+      text-align: center;
+    }
+    
+    .sText button{
+      border-radius: 4px;
+      background-color: #2F3C7E;
+      border: none;
+      color: #FBEAEB;
+      text-align: center;
+      font-size: 1.3vw;
+      padding: 2%;
+      width: 40%;
+      transition: all 0.5s;
+      cursor: pointer;
+      display: block;
+      margin: auto;
+      margin-top: 3%;
+      
+    }
+    
+    .sText button h1{
+      font-size: 5vw;
+    }
+    
+    .sText button span {
+      cursor: pointer;
+      display: inline-block;
+      position: relative;
+      transition: 0.5s;
+    }
+    
+    .sText button span:after {
+      content: '\00bb';
+      position: absolute;
+      opacity: 0;
+      top: 5px;
+      right: -20px;
+      transition: 0.5s;
+      width: 30%;
+    }
+    
+    .sText button:hover span {
+      padding-right: 13%;
+    }
+    
+    .sText button:hover span:after {
+      opacity: 1;
+      right: 0;
+    }
 } 
