--- a/Spearhead.css
+++ b/Spearhead.css
@@ -109,7 +109,7 @@ a{
     font-family: 'Audiowide';
     text-align: center;
     font-size: 1.3vw;
-    background-color: #FFE77AFF;
+    background-color: #ffe77a;
     color: #2C5F2DFF;
     margin-left: 45%;
     margin-right: 45%;
@@ -150,15 +150,228 @@ a{
     margin-left: 10%;
     margin-right: 10%;
     display: flex;
-    align-items: center;
+    height: 400px;
+    margin-bottom: 5%;
 }
 
-.container1 .mvg{
+.mvg{
     width: 33%;
     height: 100%;
-
+    background-color: #2C5F2DFF;
+    color: white;
+    padding: 2%;
+    border-radius: 10px;
+    margin-left: 2%;
+    margin-right: 2%;
+    flex: 1;
 }
 
+.mvg h1{
+    font-size: 4vw;
+    text-align: center;
+    margin-bottom: 3%;
+    font-family: 'Source Code Pro';
+}
+
+.mvg p{
+    text-align: center;
+    font-size: 2vw;
+}
+
+.mvg1{
+    width: 33%;
+    height: 100%;
+    background-color: #2c5f2d;
+    color: white;
+    padding: 2%;
+    border-radius: 10px;
+    flex: 1;
+}
+
+.mvg1 h1{
+    font-size: 4vw;
+    text-align: center;
+    margin-bottom: 3%;
+    font-family: 'Source Code Pro';
+}
+
+.mvg1 p{
+    text-align: center;
+    font-size: 2vw;
+}
+
+/* ================================================ */
+
+.cellLeaders{
+    display: flex;
+    justify-content: center;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.leaders h1{
+    text-align: center;
+    font-size: 4vw;
+    font-family: 'Source Code Pro';
+}
+
+.row{
+    display: block;
+    margin: 5%;
+}
+
+.row img{
+    width: 100%;
+    border-radius: 50%;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    transition: box-shadow 0.3s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+}
+
+.row h1{
+    text-align: center;
+    font-size: 1.5vw;
+    font-family: 'Source Code Pro';
+}
+
+.row img:hover{
+    box-shadow: 0 5px 15px rgba(0,0,0,1);
+}
+
+/* ================================================ */
+
+.blogs{
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.blogs h1{
+    font-size: 4vw;
+    text-align: center;
+    font-family: 'Source Code Pro';
+}
+
+.blogs p{
+    font-size: 2vw;
+    text-align: center;
+    font-family: 'Source Code Pro';
+}
+
+
+.row1{
+    display: flex;
+    margin-left: 10%;
+    margin-right: 10%;
+    justify-content: center;
+}
+
+.news{
+    width: 33%;
+    margin-top: 3%;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-bottom: 3%;
+    background-image: url(SpearheadIMGs/Blogs.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.newsInfo{
+    padding-top: 30%;
+    padding-bottom: 30%;
+    border-radius: 10px;
+    background-color: #2c5f2d;
+    color: #ffe77a;
+    transition: 0.5s;
+}
+
+.newsInfo:hover{
+    background-color: transparent;
+    color: transparent;
+}
+
+.newsInfo h1{
+    text-align: center;
+}
+
+/* ================================================ */
+
+.subs{
+    display: flex;
+    margin-left: 10%;
+    margin-right: 10%;
+    align-items: center;
+    margin-top: 5%;
+    margin-bottom: 3%;
+    justify-content: center;
+    
+}
+
+.subs img{
+  width: 50%;
+  border-radius: 50%;
+}
+
+.sText{
+  margin-left: 4%;
+}
+
+.sText h1{
+  font-family: 'Source Code Pro';
+  font-size: 3vw;
+}
+
+.sText p{
+  font-size: 1.9vw;
+}
+
+.sText button{
+  border-radius: 4px;
+  background-color: #2c5f2d;
+  border: none;
+  color: #ffe77a;
+  text-align: center;
+  font-size: 1.3vw;
+  padding: 2%;
+  width: 40%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin-top: 3%;
+}
+
+.sText button h1{
+  font-size: 1.5vw;
+  font-family: 'Source Code Pro';
+}
+
+.sText button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.sText button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 3px;
+  right: -40px;
+  transition: 0.5s;
+  width: 30%;
+}
+
+.sText button:hover span {
+  padding-right: 20%;
+}
+
+.sText button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
 
 /* ================================================ */
 
@@ -239,8 +452,8 @@ a{
     #noice{
         text-align: center;
         font-size: 3vw;
-        background-color: #00FFFF;
-        color: #FF69B4;
+        background-color: #FFE77AFF;
+        color: #2C5F2DFF;
         margin-left: 38%;
         margin-right: 38%;
         padding-top: 1%;
@@ -252,3 +465,260 @@ a{
         text-align: center;
     }
 
+     /* ================================================ */
+
+    .container{
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 10%;
+        margin-bottom: 5%;
+    }
+    
+    .container h1{
+        font-family: 'Source Code Pro';
+        text-align: center;
+        font-size: 7vw;
+    }
+    
+    .container p{
+        font-size: 4vw;
+        margin-top: 3%;
+    }
+    
+    /* ================================================ */
+    
+    .container1{
+        margin-top: 10%;
+        margin-left: 5%;
+        margin-right: 5%;
+        display: block;
+        height: 100%;
+        margin-bottom: 5%;
+    }
+    
+    .mvg{
+        width: 100%;
+        height: 100%;
+        background-color: #2C5F2DFF;
+        color: white;
+        padding: 4%;
+        border-radius: 10px;
+        margin-left: 0%;
+        margin-right: 0%;
+        margin-top: 2%;
+        margin-bottom: 2%;
+        flex: 1;
+    }
+    
+    .mvg h1{
+        font-size: 6vw;
+        text-align: center;
+        margin-bottom: 1%;
+    }
+    
+    .mvg p{
+        text-align: center;
+        font-size: 4vw;
+    }
+    
+    .mvg1{
+        width: 100%;
+        height: 100%;
+        background-color: #2C5F2DFF;
+        color: white;
+        padding: 4%;
+        border-radius: 10px;
+        flex: 1;
+    }
+    
+    .mvg1 h1{
+        font-size: 6vw;
+        text-align: center;
+        margin-bottom: 1%;
+    }
+    
+    .mvg1 p{
+        text-align: center;
+        font-size: 4vw;
+    }
+
+        /* ================================================ */
+
+    .cellLeaders{
+        display: block;
+        justify-content: center;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    
+    .leaders h1{
+        text-align: center;
+        font-size: 11vw;
+        font-family: 'Source Code Pro';
+        margin-top: 10%;
+    }
+    
+    .row{
+        display: block;
+        margin: 5%;
+        margin-top: 2%;
+    }
+    
+    .row img{
+        width: 100%;
+        border-radius: 50%;
+        box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+        transition: box-shadow 0.3s ease-in-out;
+        transition: .5s ease-in-out;
+        cursor: pointer;
+    }
+    
+    .row h1{
+        text-align: center;
+        font-size: 4vw;
+        font-family: 'Source Code Pro';
+    }
+    
+    .row img:hover{
+        box-shadow: 0 5px 15px rgba(0,0,0,1);
+    }
+    
+    /* ================================================ */
+    
+    
+    .blogs{
+        margin-top: 10%;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    
+    .blogs h1{
+        font-size: 10vw;
+        text-align: center;
+        font-family: 'Source Code Pro';
+    }
+    
+    .blogs p{
+        font-size: 4vw;
+        text-align: center;
+        font-family: 'Source Code Pro';
+    }
+    
+    
+    .row1{
+        display: block;
+        margin-left: 5%;
+        margin-right: 5%;
+        justify-content: center;
+    }
+    
+    .news{
+        width: 100%;
+        margin-top: 2%;
+        margin-left: 0%;
+        margin-right: 0%;
+        margin-bottom: 0%;
+        background-image: url(SpearheadIMGs/Blogs.jpg);
+        background-size: cover;
+        background-position: center;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+    
+    .newsInfo{
+        padding-top: 10%;
+        padding-bottom: 10%;
+        border-radius: 10px;
+        background-color: #2c5f2d;
+        color: #ffe77a;
+        transition: 0.5s;
+    }
+    
+    .newsInfo:hover{
+        background-color: transparent;
+        color: transparent;
+    }
+    
+    .newsInfo h1{
+        text-align: center;
+    }
+
+    .subs{
+        display: block;
+        margin-left: 5%;
+        margin-right: 5%;
+        align-items: center;
+        margin-top: 5%;
+        margin-bottom: 3%;
+        justify-content: center;
+        
+    }
+    
+    .subs img{
+      width:90%;
+      border-radius: 50%;
+      display: block;
+      margin: auto;
+    }
+    
+    .sText{
+      margin-left: 4%;
+    }
+    
+    .sText h1{
+      font-family: 'Amatic SC';
+      font-size: 10vw;
+      text-align: center;
+    }
+    
+    .sText p{
+      font-size: 4vw;
+      text-align: center;
+    }
+    
+    .sText button{
+      border-radius: 4px;
+      border: none;
+      text-align: center;
+      font-size: 1.3vw;
+      padding: 2%;
+      width: 40%;
+      transition: all 0.5s;
+      cursor: pointer;
+      display: block;
+      margin: auto;
+      margin-top: 3%;
+      
+    }
+    
+    .sText button h1{
+      font-size: 5vw;
+    }
+    
+    .sText button span {
+      cursor: pointer;
+      display: inline-block;
+      position: relative;
+      transition: 0.5s;
+    }
+    
+    .sText button span:after {
+      content: '\00bb';
+      position: absolute;
+      opacity: 0;
+      top: 5px;
+      right: -20px;
+      transition: 0.5s;
+      width: 30%;
+    }
+    
+    .sText button:hover span {
+      padding-right: 13%;
+    }
+    
+    .sText button:hover span:after {
+      opacity: 1;
+      right: 0;
+    }
+    
+}
