--- a/Index.css
+++ b/Index.css
@@ -589,8 +589,8 @@ a{
 }
 
 .marriedDesc:hover{
-  background-color: #F7C5CC;
-  color: #CC313D;
+  background-color: #f7c5cc;
+  color: #cc313d;
 }
 
 /* ================================================ */
